[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/water_drop_1.png" type="Texture" id=1]
[ext_resource path="res://sprites/soap_1.png" type="Texture" id=2]
[ext_resource path="res://sprites/water_drop_2.png" type="Texture" id=4]
[ext_resource path="res://sprites/water_drop_3.png" type="Texture" id=5]
[ext_resource path="res://Droplet.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15.6624, 28.6555 )

[node name="Droplet" type="RigidBody2D" groups=[
"drop",
]]
gravity_scale = 10.0
script = ExtResource( 6 )

[node name="Water_1" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )

[node name="Water_2" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )

[node name="Water_3" type="Sprite" parent="."]
visible = false
texture = ExtResource( 5 )

[node name="Soap" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
